--- a/client/app/shared/variables.scss
+++ b/client/app/shared/variables.scss
@@ -20,4 +20,5 @@ $font-family: "Open Sans", Arial, sans-serif;
 //
 // Media
 // --------------------------------------------------
+$screen-sm: 550px;
 $nav-break: 750px;
